# m2md

./: .gitignore  Makefile.am  configure.ac  valid.h
cfg/: m2md.ini  poll-list.conf
src/: .gitignore  Makefile.am  cfg.c  cfg.h  macros.h  main.c  modbus.c  modbus.h  mqtt.c  mqtt.h  poll-list.c  poll-list.h  reg2topic-map.c  reg2topic-map.h
tst/: Makefile.am  m2md-progs.sh  main.c
